# Udapp

./: .gitignore  CMakeLists.txt  MIT.LICENSE  README.md  UOPEN
demo/: CMakeLists.txt  demo.cc
docs/: MITch.LICENSE  thread_impl.md
include/: defint.h  udentry.h  udinc.h
include/Udapp/: UdApplication.hpp
include/Udbas/: handle.hpp  threads.hpp
include/Uddef/: cchead.hpp  comdef.h  prodef.h
include/Uddef/assist/: function.hpp
include/Udlib/: Udthread.hpp
include/Udsys/: udsys.h
source/: CMakeLists.txt
source/Udapp/: CMakeLists.txt  UdApplication.cpp  udapp.cpp
source/Udbas/: CMakeLists.txt  threads.cpp
source/Udext/: CMakeLists.txt
source/Udlib/: CMakeLists.txt
source/Udsys/: CMakeLists.txt  udsys.c
